Adding TopPanel as an independent unit. Several optimizations.

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,10 @@
 			<param-name>applicationClassName</param-name>
 			<param-value>com.friendfeed.web.FriendFeedApplication</param-value>
 		</init-param>
+		<init-param>
+			<param-name>ignorePaths</param-name>
+			<param-value>assets</param-value>
+		</init-param>
 	</filter>
 
 	<filter-mapping>
