--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<fenixframework.version>2.1-SNAPSHOT</fenixframework.version>
-		<fenixframework.code.generator>pt.ist.fenixframework.backend.mem.MemCodeGenerator</fenixframework.code.generator>
+		<fenixframework.code.generator>pt.ist.fenixframework.backend.jvstmojb.codeGenerator.FenixCodeGeneratorOneBoxPerObject</fenixframework.code.generator>
 	</properties>
 
 	<build>
@@ -78,7 +78,7 @@
 		</dependency>
 		<dependency>
 			<groupId>pt.ist</groupId>
-			<artifactId>fenix-framework-backend-mem</artifactId>
+			<artifactId>fenix-framework-backend-jvstm-ojb</artifactId>
 			<version>2.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
