--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,11 @@
 	version="2.5">
 
 	<display-name>FriendFeed</display-name>
+	
+	<filter>
+		<filter-name>CloseTxFilter</filter-name>
+		<filter-class>com.friendfeed.web.servlet.CloseTxFilter</filter-class>
+	</filter>
 
 	<filter>
 		<filter-name>wicket</filter-name>
@@ -17,6 +22,11 @@
 			<param-value>assets</param-value>
 		</init-param>
 	</filter>
+	
+	<filter-mapping>
+		<filter-name>CloseTxFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 
 	<filter-mapping>
 		<filter-name>wicket</filter-name>
