--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,18 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-	version="2.5">
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+	version="3.0">
 
 	<display-name>FriendFeed</display-name>
-	
-	<filter>
-		<filter-name>CloseTxFilter</filter-name>
-		<filter-class>com.friendfeed.web.servlet.CloseTxFilter</filter-class>
-	</filter>
 
-	<filter>
-		<filter-name>wicket</filter-name>
-		<filter-class>org.apache.wicket.protocol.http.WicketFilter</filter-class>
+	<servlet>
+		<servlet-name>wicket</servlet-name>
+		<servlet-class>org.apache.wicket.protocol.http.WicketServlet</servlet-class>
 		<init-param>
 			<param-name>applicationClassName</param-name>
 			<param-value>com.friendfeed.web.FriendFeedApplication</param-value>
@@ -21,15 +16,11 @@
 			<param-name>ignorePaths</param-name>
 			<param-value>assets</param-value>
 		</init-param>
-	</filter>
-	
-	<filter-mapping>
-		<filter-name>CloseTxFilter</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
 
-	<filter-mapping>
-		<filter-name>wicket</filter-name>
+	<servlet-mapping>
+		<servlet-name>wicket</servlet-name>
 		<url-pattern>/*</url-pattern>
-	</filter-mapping>
+	</servlet-mapping>
 </web-app>
