--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<fenixframework.version>2.1-SNAPSHOT</fenixframework.version>
+		<fenixframework.version>2.1.0-rc2</fenixframework.version>
 	</properties>
 
 	<build>
@@ -105,7 +105,7 @@
 		<dependency>
 			<groupId>org.apache.wicket</groupId>
 			<artifactId>wicket-core</artifactId>
-			<version>6.2.0</version>
+			<version>6.7.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.tomcat</groupId>
