--- a/pom.xml
+++ b/pom.xml
@@ -2,6 +2,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>pt.ist</groupId>
+        <artifactId>fenix-framework-project</artifactId>
+        <version>1.0.0</version>
+    </parent>
+
 	<groupId>com.friendfeed</groupId>
 	<artifactId>friendfeed-web</artifactId>
 	<version>0.1-SNAPSHOT</version>
@@ -10,36 +16,8 @@
 	<name>FriendFeed Web</name>
 	<url>http://jcarvalho.github.com/friendfeed-web</url>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<fenixframework.version>2.1.0-rc2</fenixframework.version>
-	</properties>
-
 	<build>
 		<plugins>
-			<plugin>
-				<groupId>pt.ist</groupId>
-				<artifactId>ff-maven-plugin</artifactId>
-				<version>${fenixframework.version}</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>ff-generate-domain</goal>
-							<goal>ff-post-compile</goal>
-							<goal>ff-process-atomic-annotations</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.5.1</version>
-				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
-				</configuration>
-			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
@@ -68,31 +46,6 @@
 					</execution>
 				</executions>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.4</version>
-				<configuration>
-					<archive>
-						<index>true</index>
-						<manifest>
-							<addClasspath>true</addClasspath>
-						</manifest>
-						<manifestEntries>
-							<Implementation-Title>${project.name}</Implementation-Title>
-							<Implementation-Version>${project.version}</Implementation-Version>
-							<Implementation-Vendor>${project.organization.name}</Implementation-Vendor>
-							<groupId>${project.groupId}</groupId>
-							<artifactId>${project.artifactId}</artifactId>
-						</manifestEntries>
-					</archive>
-					<excludes>
-						<exclude>**/*_Base*</exclude>
-						<exclude>**/pt/ist/fenixframework/ValueTypeSerializer*</exclude>
-						<exclude>**/pt/ist/fenixframework/backend/CurrentBackEndId*</exclude>
-					</excludes>
-				</configuration>
-			</plugin>
 		</plugins>
 	</build>
 
@@ -105,7 +58,7 @@
 		<dependency>
 			<groupId>org.apache.wicket</groupId>
 			<artifactId>wicket-core</artifactId>
-			<version>6.7.0</version>
+			<version>6.8.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.tomcat</groupId>
@@ -115,19 +68,11 @@
 		</dependency>
 	</dependencies>
 
-	<repositories>
-		<repository>
-			<id>fenix-ashes-maven-repository</id>
-			<url>https://fenix-ashes.ist.utl.pt/maven-public</url>
-		</repository>
-	</repositories>
-
-	<pluginRepositories>
-		<pluginRepository>
-			<id>fenix-ashes-maven-repository</id>
-			<url>https://fenix-ashes.ist.utl.pt/maven-public</url>
-		</pluginRepository>
-	</pluginRepositories>
-
+    <repositories>
+        <repository>
+            <id>fenix-ashes-maven-repository</id>
+            <url>https://fenix-ashes.ist.utl.pt/nexus/content/groups/fenix-ashes-maven-repository</url>
+        </repository>
+    </repositories>
 
 </project>
